@@ -7,7 +7,8 @@
 runMacs2(nInd, nChr = 1, segSites = NULL, Ne = 100, bp = 1e+08,
   genLen = 1, mutRate = 2.5e-08, histNe = c(500, 1500, 6000, 12000,
   1e+05), histGen = c(100, 1000, 10000, 1e+05, 1e+06), inbred = FALSE,
-  split = NULL, ploidy = 2L, returnCommand = FALSE, nThreads = 1L)
+  split = NULL, ploidy = 2L, returnCommand = FALSE,
+  nThreads = NULL)
 }
 \arguments{
 \item{nInd}{number of individuals to simulate}
@@ -40,7 +41,8 @@ population sizes given in histNe}
 \code{\link{runMacs}} be returned. If TRUE, MaCS will not be called and 
 the command is returned instead.}
 
-\item{nThreads}{if OpenMP is available, this will allow for simulating chromosomes in parallel}
+\item{nThreads}{if OpenMP is available, this will allow for simulating chromosomes in parallel. 
+If the value is NULL, the number of threads is automatically detected.}
 }
 \value{
 an object of \code{\link{MapPop-class}} or if 
