@@ -1,5 +1,8 @@
 Changes in version 0.9.1
   
+  New features
+    -Max number of threads automatically detected
+  
   Bug fixes
     -fixed faulting double crossover logic
 
